Cleaned up Keys for lists and updated the way that opening a recipe works

--- a/root/lib/style.scss
+++ b/root/lib/style.scss
@@ -46,5 +46,12 @@ body {
 		> .search {
 			height: 20px;
 		}
+
+		nav {
+			> a {
+				padding-right: 10px;
+				text-decoration: underline;
+			}
+		}
 	}
 }
