--- a/root/lib/style.scss
+++ b/root/lib/style.scss
@@ -6,6 +6,8 @@ $header-font-family: Impact,
 Charcoal,
 sans-serif;
 body {
+    overflow: hidden;
+    margin: 0;
     * {
         font-family: Verdana, Arial, sans-serif;
         font-size: 18px;
@@ -14,6 +16,65 @@ body {
     textarea,
     select {
         border: 1px solid grey;
+    }
+}
+
+.site-body {
+    display: flex;
+    flex: 1;
+    height: 100vh;
+    >.navigation {
+        order: -1;
+        width: 50px;
+        background-color: $color-theme-header-text;
+        transition: width 0.5s;
+        .navigation-content {
+            position: relative;
+        }
+        &.show {
+            width: 200px;
+            .toggle {
+                &::before,
+                &::after {
+                    width: 15px;
+                }
+                &::before {
+                    transform: rotate(-45deg);
+                }
+                &::after {
+                    transform: rotate(45deg);
+                    top: 14px;
+                }
+            }
+        }
+        .toggle {
+            position: absolute;
+            right: 0;
+            top: 10px;
+            width: 50px;
+            height: 25px;
+            &::before,
+            &::after {
+                content: " ";
+                transition: all 0.5s linear;
+                background-color: black;
+                position: absolute;
+                right: 15px;
+                width: 25px;
+                height: 3px;
+            }
+            &::before {
+                top: 5px;
+            }
+            &::after {
+                top: 15px;
+            }
+        }
+    }
+    >.open-content {
+        flex: 1;
+        overflow: scroll;
+        padding: 5px;
     }
 }
 
@@ -63,24 +124,26 @@ body {
     }
 }
 
-.header-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+header {
     border-bottom: 2px solid $color-theme-header-text;
-    padding-bottom: 5px;
-    margin-bottom: 5px;
-    >h1 {
-        color: $color-theme-header-text;
-        margin: 0;
-        font-size: 50px;
-        font-family: $header-font-family;
-    }
-    nav {
-        >a {
-            padding-right: 10px;
-            text-decoration: underline;
+    .header-content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 5px;
+        margin-bottom: 5px;
+        >h1 {
+            color: $color-theme-header-text;
+            margin: 0;
+            font-size: 50px;
+            font-family: $header-font-family;
+        }
+        nav {
+            >a {
+                padding-right: 10px;
+                text-decoration: underline;
+            }
         }
     }
 }
