--- a/root/style/components/navigation.scss
+++ b/root/style/components/navigation.scss
@@ -12,23 +12,31 @@
         list-style-type: none;
         margin: 0;
         padding: 0;
-        >li {
-            height: 35px;
-        }
+        overflow: hidden;
         .link {
             height: 35px;
             display: block;
             line-height: 35px;
             color: $theme-text-header;
             padding-left: 10px;
-            &:hover {
+            >.text {
+                opacity: 0;
+                transition: all 0.5s;
+            }
+            &.hover:hover {
                 background-color: $theme-color-main;
+            }
+            &::before {
+                font-size: 26px;
+                padding-right: 5px;
             }
         }
         .toggle {
-            float: right;
-            width: 50px;
             padding: 0;
+            width: 50px;
+            float: right;
+            display: block;
+            height: 35px;
             &::before,
             &::after {
                 content: " ";
@@ -38,15 +46,13 @@
                 right: 15px;
                 width: 25px;
                 height: 3px;
+                padding: 0;
             }
             &::before {
                 top: 10px;
             }
             &::after {
                 top: 20px;
-            }
-            &:hover {
-                background-color: transparent;
             }
         }
     }
@@ -65,6 +71,11 @@
             &::after {
                 transform: rotate(45deg);
                 top: 19px;
+            }
+        }
+        .link {
+            >.text {
+                opacity: 1;
             }
         }
     }
