--- a/root/style/variables.scss
+++ b/root/style/variables.scss
@@ -1,6 +1,6 @@
-$theme-color-main: #5f5f5f;
-$theme-color-accent: #4CAF50;
-$theme-color-content: #f1f1f1;
+$theme-color-main: #565656;
+$theme-color-accent: #c09f80;
+$theme-color-content: #d7cec7;
 $theme-text-label: #5f5f5f;
 $theme-text-header: #f1f1f1;
 $theme-text-font-family: Impact,
