--- a/root/style/variables.scss
+++ b/root/style/variables.scss
@@ -1,6 +1,7 @@
-$theme-color-main: #565656;
-$theme-color-accent: #c09f80;
-$theme-color-content: #d7cec7;
+$theme-color-one: #004882;
+$theme-color-two: #0096cf;
+$theme-color-three: #00cd76;
+$theme-color-four: #ff7333;
 $theme-text-label: #5f5f5f;
 $theme-text-header: #f1f1f1;
 $theme-text-font-family: Impact,
