--- a/root/style/main.scss
+++ b/root/style/main.scss
@@ -23,7 +23,8 @@ body {
     >.open-content {
         flex: 1;
         overflow: scroll;
-        padding: 5px 5px 50px 5px;
+        padding: 0;
+        margin-bottom: 50px;
     }
 }
 
