--- a/root/style/variables.scss
+++ b/root/style/variables.scss
@@ -4,6 +4,9 @@ $theme-color-three: #00cd76;
 $theme-color-four: #ff7333;
 $theme-text-label: #5f5f5f;
 $theme-text-header: #f1f1f1;
-$theme-text-font-family: Impact,
-Charcoal,
+$theme-text-font-family: TensoMedium,
+TensoLight,
+"Helvetica Neue",
+Helvetica,
+Arial,
 sans-serif;
