--- a/root/style/components/navigation.scss
+++ b/root/style/components/navigation.scss
@@ -41,7 +41,7 @@
             &::after {
                 content: " ";
                 transition: all 0.5s linear;
-                background-color: black;
+                background-color: $theme-text-header;
                 position: absolute;
                 right: 15px;
                 width: 25px;
