Cleaned up ingredients and steps

--- a/root/style/components/recipe.scss
+++ b/root/style/components/recipe.scss
@@ -11,5 +11,8 @@
         padding: 10px;
         display: flex;
         justify-content: space-around;
+        >section {
+           min-width: 50%; 
+        }
     }
 }
