--- a/root/style/main.scss
+++ b/root/style/main.scss
@@ -36,7 +36,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: center;
     >* {
         padding: 5px;
         margin: 5px;
