--- a/root/style/variables.scss
+++ b/root/style/variables.scss
@@ -1,5 +1,5 @@
-$theme-color-one: #004882;
-$theme-color-two: #0096cf;
+$theme-color-one: #000d67;
+$theme-color-two: #000d67;
 $theme-color-three: #00cd76;
 $theme-color-four: #ff7333;
 $theme-text-label: #5f5f5f;
