Cleaned up style a bit and fixed multiple upload issue

--- a/root/style/components/navigation.scss
+++ b/root/style/components/navigation.scss
@@ -1,7 +1,7 @@
 @import "../variables.scss";
 .navigation {
     width: 50px;
-    background-color: $theme-color-two;
+    background-color: #03102f;
     transition: width 0.5s;
     .navigation-content {
         position: relative;
