--- a/root/style/components/navigation.scss
+++ b/root/style/components/navigation.scss
@@ -15,16 +15,43 @@
         overflow: hidden;
         .link {
             height: 35px;
-            display: block;
+            display: flex;
+            align-items: center;
             line-height: 35px;
             color: $theme-text-header;
-            padding-left: 10px;
+            padding: 5px 0 5px 10px;
+            &:first-child {
+                display: block;
+                padding: 0;
+            }
+            >.image {
+                width: 30px;
+                height: 30px;
+                min-width: 30px;
+            }
             >.text {
                 opacity: 0;
-                transition: all 0.5s;
+                padding-left: 10px;
+                
+                &.truncate {
+                    width: 150px;
+                    white-space: nowrap;
+                    text-rendering: auto;
+                    -webkit-font-smoothing: antialiased;
+                    display: inline-block;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    transition: all 0.5s;
+                }
             }
-            &.hover:hover {
-                background-color: $theme-color-one;
+            &.hover:hover,
+            &.active {
+                background-color: #324177;
+            }
+            &.active {
+                background-color: #324177;
+                border-left: 2px solid green;
+                padding-left: 8px;
             }
             &::before {
                 font-size: 26px;
