Added login screen and animation

--- a/root/style/components/header.scss
+++ b/root/style/components/header.scss
@@ -1,6 +1,6 @@
 @import "../variables.scss";
     .header-content {
-        background-color: white;
+        background-color: $color-background-light;
         height: 60px;
         padding: 0 25px;
         display: flex;
