Added the ability to logout and added conditional editing based on owner

--- a/root/style/components/autocomplete.scss
+++ b/root/style/components/autocomplete.scss
@@ -20,6 +20,7 @@
         .item {
             padding: 5px;
             border-bottom: 1px solid $text-dark;
+            cursor: pointer;
             .highlight {
                 font-weight: bold;
                 font-size: 20px;
