--- a/root/style/components/navigation.scss
+++ b/root/style/components/navigation.scss
@@ -22,6 +22,7 @@
             color: $text-light;
             padding: 5px 0 5px 10px;
             opacity: 0.75;
+            cursor: pointer;
             .ti-close {
                 position: absolute;
                 top: 0;
