--- a/root/style/components/search.scss
+++ b/root/style/components/search.scss
@@ -39,6 +39,7 @@
             align-items: stretch;
             margin: 0px 10px;
             padding: 5px 0;
+            cursor: pointer;
             .details {
                 padding-left: 20px;
                 display: flex;
