--- a/root/style/main.scss
+++ b/root/style/main.scss
@@ -8,6 +8,7 @@ body {
     * {
         font-family: inherit;
         font-size: inherit;
+        outline-color: $color-accent;
     }
     input,
     textarea,
@@ -114,6 +115,52 @@ body {
                 margin-bottom: 50px;
                 height: calc(100% - 60px);
             }
+        }
+    }
+}
+
+
+/* The switch - the box around the slider */
+.toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    input {
+        display:none;
+    }
+    input:checked + .slider {
+        background-color: $color-accent;
+    }
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+        /* ROUND */
+        border-radius: 34px;        
+        &:before{
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+            /* ROUND */
+            border-radius: 50%;            
         }
     }
 }
