--- a/root/style/main.scss
+++ b/root/style/main.scss
@@ -19,7 +19,7 @@ body {
     }
 }
 .app {
-    .app-login {
+    .app-authenticate {
         display: flex;
         position: absolute;
         justify-content: center;
@@ -36,61 +36,6 @@ body {
         }
         &.hide {
             transition-delay: 0s;
-        }
-        .app-login-inner {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            width: 300px;
-            height: 300px;
-            background-color: $color-background-light;
-            box-shadow: 5px 5px 5px $color-two;
-            .app-login-form {
-                align-content: stretch;
-                display: flex;
-                flex-direction: column;
-                width: 100%;
-                input {
-                    margin: 10px;
-                }
-            }
-            header,
-            footer {
-                display: flex;
-                width: 100%;
-                background-color: $color-background;
-            }
-            header {
-                justify-content: space-between;
-                padding: 10px 0;
-                border-bottom: 1px solid $text-dark;
-                color: $text-dark;
-                label {
-                    padding-left: 10px;
-                }
-                .ti-close {
-                    padding-right: 10px;
-                    opacity: 0.75;
-                    &:hover {
-                        opacity: 1;
-                    }
-                }
-            }
-            footer {
-                justify-content: center;
-                padding: 10px 0;
-                border-top: 1px solid $text-dark;
-                button {
-                    background-color: $color-one;
-                    border: none;
-                    color: $text-light;
-                    padding: 5px 15px;
-                    &:hover {
-                        background-color: $color-two;
-                    }
-                }
-            }
         }
     }
     .app-body {
