Added the notify component and added it to save of a recipe

--- a/root/style/variables.scss
+++ b/root/style/variables.scss
@@ -18,3 +18,7 @@ $text-light-secondary: #B3AFAF;
 $text-dark: #2e2c2d;
 $text-dark-secondary: #585658;
 
+$notify-message: #F9F8CC;
+$notify-error: #F96666;
+$notify-success: #B1FFB5;
+
