Got rid of the dropdown for units and converted to an Autocomplete to allow free entry

--- a/root/style/components/autocomplete.scss
+++ b/root/style/components/autocomplete.scss
@@ -29,7 +29,8 @@
             &:last-child {
                 border-bottom: none;
             }
-            &:hover {
+            &:hover,
+            &.active {
                 background-color: $color-two;
                 color: $text-light-secondary;
                 .highlight {
