--- a/root/style/components/steps.scss
+++ b/root/style/components/steps.scss
@@ -13,6 +13,7 @@
             align-items: center;
             textarea {
                 width: 100%;
+                resize: vertical;
             }
         }
     }
