--- a/root/style/components/recipeHeader.scss
+++ b/root/style/components/recipeHeader.scss
@@ -79,6 +79,9 @@
             font-size: 14px;
             color: $text-dark-secondary;
             padding: 0 7px;
+            .serving-value {
+                width: 2em;
+            }
             .prep-time,
             .cook-time {
                 display: flex;
