--- a/root/style/components/ingredients.scss
+++ b/root/style/components/ingredients.scss
@@ -1,3 +1,5 @@
+@import "../variables.scss";
+
 .recipe-ingredients {
     ul {
         padding: 0;
@@ -5,6 +7,9 @@
             display: flex;
             align-items: stretch;
             padding: 5px;
+            input.required {
+                background-color: $notify-error;
+            }
             .quantity {
                 width: 5em;
                 text-align: center;
