Cleaned up add links and notify bug when timer happens before non timer

--- a/root/style/components/ingredients.scss
+++ b/root/style/components/ingredients.scss
@@ -5,7 +5,7 @@
         padding: 0;
         li {
             display: flex;
-            align-items: stretch;
+            align-items: center;
             padding: 5px;
             input.required {
                 background-color: $notify-error;
@@ -30,9 +30,9 @@
                     flex: 1;
                 }
             }
-            .ti-trash {
-                align-self: center;
-            }
+        }
+        .ti-trash {
+            align-self: center;
         }
     }
 }
